commit para hacer POST

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=66a884f954f13ce0e19099e1e3e18fe5dd2dc3a2cc699e7cd89e8
 spring.datasource.driver-class-name=org.postgresql.Driver
 ##spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.properties.hibernate.default_schema=salesforce
+spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 ##spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
